# epos_cpp

./: CMakeLists.txt  LICENSE  README.md  epos_config.h.in
epos/: CMakeLists.txt  epos.cpp  epos.hpp  epos2wav.cpp  fit.cpp  fit.hpp  histogram.cpp  histogram.hpp  impulse_fun.cpp  impulse_fun.hpp  peak_detector_CeBr.cpp  peak_detector_CeBr.hpp  stats.cpp
include/: nr.h  nr.hpp  nrutil.h  nrutil.hpp
nric/: CMakeLists.txt  covsrt.cpp  gaussj.cpp  mrqcof.cpp  mrqmin.cpp  nrutil.cpp
step1/: CMakeLists.txt  main.cpp  step1.cpp  step1.hpp
test/: CMakeLists.txt  epos_ftest.cpp  epos_test.cpp  test_channel.cpp  test_data_set_bin.cpp  test_data_set_txt.cpp  test_epos.cpp  test_fit.cpp  test_histogram.cpp  test_impulse_fun.cpp  test_peak_detector.cpp  test_step1.cpp  utils.cpp  utils.hpp
